--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ header label {
 }
 
 .features .box-container .box {
-    flex: 1 1 30rem;
+    flex: 1 1 40rem;
     background: #fff;
     border-radius: .5rem;
     border: .1rem solid rgba(0,0,0,.2);
@@ -195,6 +195,10 @@ header label {
     border-radius: .5rem;
     text-align: center;
     transition: .2s linear;
+}
+
+.features .box-container .box:hover {
+    transform: scale(1.05);
 }
 
 .features {
